force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/Work_Order_Generation_Status_Staging__c.object-meta.xml
<CustomObject>
    <description>Duplicate Object</description>
    <label>Work Order Generation Status Staging</label>
    <nameField>
        <label>Work Order Generation Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Generation Status Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>