force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Expected_WO_Mid_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_WO_Mid_Date__c</fullName>
    <label>Expected WO Mid Date</label>
    <type>Date</type>
</CustomField>