force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Is_an_Emergency_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_an_Emergency_Order__c</fullName>
    <formula>IF( Order_Product__r.Order.Emergency__c == true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is an Emergency Order?</label>
    <type>Checkbox</type>
</CustomField>