force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Is_Order_Product_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Product_Active__c</fullName>
    <formula>IF( Order_Product__r.Active__c == True , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Order Product Active?</label>
    <type>Checkbox</type>
</CustomField>