force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Is_Product_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Active__c</fullName>
    <formula>IF( Order_Product__r.Related_Product__r.IsActive == True, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Product Active?</label>
    <type>Checkbox</type>
</CustomField>