force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Last_Automation_Created_Date_stamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Automation_Created_Date_stamp__c</fullName>
    <label>Last Automation Created Date stamp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>