force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Last_InFlight_WO_Date_stamp__c.field-meta.xml
<CustomField>
    <fullName>Last_InFlight_WO_Date_stamp__c</fullName>
    <label>Last InFlight WO Date stamp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>