force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Account_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Order_Account_On_Hold__c</fullName>
    <label>Order Account On Hold?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>