force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Account_Status__c</fullName>
    <label>Order Account Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>