force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Inventory_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Order_Inventory_Allocated__c</fullName>
    <label>Order Inventory Allocated</label>
    <length>10</length>
    <type>Text</type>
</CustomField>