force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Product_Active__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Active__c</fullName>
    <label>Order Product Active</label>
    <length>10</length>
    <type>Text</type>
</CustomField>