force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Product_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_IsActive__c</fullName>
    <label>Order Product IsActive</label>
    <length>20</length>
    <type>Text</type>
</CustomField>