force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Product_Last_Effective_Service__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Last_Effective_Service__c</fullName>
    <formula>IF( Order_Product__r.Last_Automation_Created_Date__c &gt;  Order_Product__r.Last_InFlight_WO_Date__c , Order_Product__r.Last_Automation_Created_Date__c, Order_Product__r.Last_InFlight_WO_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Last Effective Service</label>
    <type>Date</type>
</CustomField>