force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>