force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Order_Status_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Stamp__c</fullName>
    <label>Order Status Stamp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>