force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Reasons_for_failures__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_failures__c</fullName>
    <label>Reasons for failures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>