force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/WOLI_Id__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Id__c</fullName>
    <label>WOLI Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>