force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Work_Order_Generation_Status_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Generation_Status_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Generation Status ID (18)</label>
    <type>Text</type>
</CustomField>