force-app/main/default/objects/Work_Order_Generation_Status_Staging__c/fields/Work_Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Start_Date__c</fullName>
    <label>Work Order Start Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>